[package]
name = "idseq-dedup"
version = "0.1.0"
authors = ["morsecodist <todd@morsecodist.io>"]
description = "Deduplicates reads from FASTA and FASTQ files"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.32.0"
clap = "2.33.3"
csv = "1.1"
simple-error = "0.2.2"

[dev-dependencies]
rand = "0.7.3"
tempfile = "3.0.7"
